<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome Paul Pugay</string>
    <string name="hero_placeholder">a hamburger</string>
    <string name="latest_promo">Latest Promo</string>
    <string name="my_interest">My Interest</string>
    <string name="search_promos">Search for promos near you</string>
    <string name="latest_promo_placeholder">a placeholder</string>
    <string name="popular">Popular Promos and Coupons</string>
    <string name="see_all">See All</string>
    <string name="pancake_house">Pancake House</string>
    <string name="pancake_placeholder">a pancake</string>
    <string name="a_star">a star</string>
</resources>
